Add CORS configs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=leaves
 # Microsoft Identity Platform v2.0
 # client secret kfl8Q~YtrZjF32YLk4Mjy5b0~EE-x3WY__K1EaPs
 # client secret id b3cbaa87-4ad4-4215-92c1-e1c62cd8db70
-spring.security.oauth2.client.registration.microsoft.client-id=76b1492c-ee98-47e4-b0ea-f4ac905161c2
+spring.security.oauth2.client.registration.microsoft.client-id=${CLIENT_ID}
 spring.security.oauth2.client.registration.microsoft.client-secret=kfl8Q~YtrZjF32YLk4Mjy5b0~EE-x3WY__K1EaPs
 spring.security.oauth2.client.registration.microsoft.scope=openid,profile,email
 spring.security.oauth2.client.provider.microsoft.issuer-uri=https://login.microsoftonline.com/9935f0cf-cb4f-4df6-a7fc-5e71657285ef/v2.0
